--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   securewebui:
     image: ghcr.io/open-webui/open-webui:git-e6ff416-cuda
-    container_name: securewebui
+    container_name: open-webui_secure
     ports:
       - "8080:8080"
     restart: unless-stopped
