--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -2,8 +2,8 @@ name: Trivy Security Scan
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # Runs every day at midnight UTC
-  workflow_dispatch:  # Allows manual triggering
+    - cron: "0 0 * * *"  # Runs daily at midnight UTC
+  workflow_dispatch:
 
 jobs:
   scan:
@@ -14,18 +14,16 @@ jobs:
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Run Trivy Scan
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: "ghcr.io/notyusheng/open-webui_secure:latest"
-          severity: "HIGH,CRITICAL"
-          format: "table"
-          exit-code: 1  # Fails the workflow if HIGH/CRITICAL vulnerabilities are found
-          ignore-unfixed: true  # Ignore vulnerabilities without a fix
+      - name: Run Trivy Scan and Save Report
+        run: |
+          mkdir -p reports  # Ensure the directory exists
+          trivy image ghcr.io/notyusheng/open-webui_secure:latest \
+            --severity HIGH,CRITICAL \
+            --format table \
+            --output reports/trivy-report.txt
 
       - name: Upload Scan Report
-        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: trivy-scan-report
-          path: trivy-report.txt
+          path: reports/trivy-report.txt
