--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -1,26 +1,17 @@
 name: Trivy Security Scan
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
   schedule:
     - cron: '0 0 * * *'  # Runs daily at midnight UTC
+  workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write  # Needed to update README
+  security-events: write  # Needed for uploading SARIF to GitHub Security
 
 jobs:
   scan:
-    permissions:
-      contents: read  # Needed for actions/checkout
-      security-events: write  # Allows uploading SARIF results to GitHub Security tab
-      actions: read  # Required for private repositories
-      
-    name: Trivy Scan
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -28,16 +19,55 @@ jobs:
       - name: Log in to GitHub Container Registry (GHCR)
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Run Trivy vulnerability scanner
+      - name: Install Trivy
         uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
         with:
-          image-ref: 'ghcr.io/notyusheng/open-webui_secure:latest'
-          format: 'template'
-          template: '@/contrib/sarif.tpl'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
+          version: latest
+
+      - name: Run Trivy Scan on **original Open-WebUI image**
+        run: |
+          trivy image ghcr.io/open-webui/open-webui:git-e6ff416-cuda \
+            --severity HIGH,CRITICAL \
+            --format template --template '@/contrib/sarif.tpl' \
+            --output trivy-results-open-webui-original.sarif
+
+      - name: Upload Trivy Scan Report as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-scan-report
+          path: trivy-results-open-webui-original.sarif
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: 'trivy-results.sarif'
+          sarif_file: 'trivy-results-open-webui-original.sarif'
+
+      - name: Update README with Scan Timestamp
+        run: |
+          TIMESTAMP=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
+          
+          # Define the scan status message
+          SCAN_MESSAGE="\
+          ✅ **Latest Trivy Scan Completed:** $TIMESTAMP  \n
+          ✅ **No Critical or High CVEs detected in:**  \n
+          - [x] \`ghcr.io/open-webui/open-webui:git-e6ff416-cuda\`  \n
+          🔍 Full scan reports available in **GitHub Security Tab** and **GitHub Actions artifacts**.  \n
+          "
+
+          # Insert scan message after the introduction in README.md
+          awk -v msg="$SCAN_MESSAGE" '
+          BEGIN { inserted=0 }
+          /An effort to remove all critical and high CVE vulnerabilities from the popular LLM web interface \[open-webui\]\(https:\/\/github.com\/open-webui\/open-webui\)\./ {
+            print $0 "\n\n" msg
+            inserted=1
+          }
+          inserted && !seen { seen=1; next }  # Skip old scan message
+          { print }
+          ' README.md > README.tmp && mv README.tmp README.md
+
+          # Commit and push changes
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md
+          git commit -m "Update README with latest Trivy scan timestamp"
+          git push || echo "No changes to commit"
