--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -38,10 +38,19 @@ jobs:
 
       - name: Extract scan results
         run: |
-          TIMESTAMP=$(date -u +"%Y-%m-%d %H:%M:%S UTC")
+          # Get timestamps in UTC
+          TIMESTAMP_UTC=$(date -u +"%Y-%m-%d %I:%M:%S %p UTC")
+
+          # Convert to Singapore Time (SGT, UTC+8)
+          TIMESTAMP_SGT=$(TZ=Asia/Singapore date +"%Y-%m-%d %I:%M:%S %p SGT")
+
+          # Extract vulnerability counts
           CRITICAL=$(jq '[.Results[].Vulnerabilities? // [] | .[] | select(.Severity=="CRITICAL")] | length' trivy-results.json)
           HIGH=$(jq '[.Results[].Vulnerabilities? // [] | .[] | select(.Severity=="HIGH")] | length' trivy-results.json)
-          echo "LAST_SCAN=${TIMESTAMP}" >> $GITHUB_ENV
+
+          # Store environment variables
+          echo "LAST_SCAN_UTC=${TIMESTAMP_UTC}" >> $GITHUB_ENV
+          echo "LAST_SCAN_SGT=${TIMESTAMP_SGT}" >> $GITHUB_ENV
           echo "CRITICAL_COUNT=${CRITICAL}" >> $GITHUB_ENV
           echo "HIGH_COUNT=${HIGH}" >> $GITHUB_ENV
 
@@ -52,8 +61,9 @@ jobs:
 
           # Generate the new scan results content with emojis
           SCAN_RESULTS="$PLACEHOLDER\n"
-          SCAN_RESULTS+="## 🔍 Latest Security Scan Results\n\n"
-          SCAN_RESULTS+="🕒 **Last Scan:** $LAST_SCAN  \n"
+          SCAN_RESULTS+="## Latest Security Scan Results\n\n"
+          SCAN_RESULTS+="🕒 **Last Scan (UTC):** $LAST_SCAN_UTC  \n"
+          SCAN_RESULTS+="🕒 **Last Scan (SGT):** $LAST_SCAN_SGT  \n"
           SCAN_RESULTS+="🚨 **Critical Vulnerabilities:** $CRITICAL_COUNT  \n"
           SCAN_RESULTS+="⚠️ **High Vulnerabilities:** $HIGH_COUNT  \n"
 
