--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  securewebui:
+  open-webui_secure:
     image: ghcr.io/open-webui/open-webui:git-e6ff416-cuda
     container_name: open-webui_secure
     ports:
