--- a/.github/workflows/trivy-scan.yml
+++ b/.github/workflows/trivy-scan.yml
@@ -48,10 +48,29 @@ jobs:
           # Convert to Singapore Time (SGT, UTC+8) in the same format
           TIMESTAMP_SGT=$(TZ=Asia/Singapore date +"%d %b %Y %I:%M:%S %p SGT")
   
-          # Extract vulnerability counts using SARIF schema
-          HIGH=$(jq '[.runs[].results[]? | select(.properties.tags | index("HIGH"))] | length' trivy-results.sarif)
-          CRITICAL=$(jq '[.runs[].results[]? | select(.properties.tags | index("CRITICAL"))] | length' trivy-results.sarif)
-    
+          # Extract vulnerability counts by joining results with rules
+          CRITICAL=$(jq '
+            .runs[] |
+            ($rules := .tool.driver.rules) |
+            (.results // []) |
+            map(
+              select(($rules | map(select(.id == .ruleId))[0].properties.tags // []) | index("CRITICAL"))
+            ) | length
+          ' trivy-results.sarif)
+  
+          HIGH=$(jq '
+            .runs[] |
+            ($rules := .tool.driver.rules) |
+            (.results // []) |
+            map(
+              select(($rules | map(select(.id == .ruleId))[0].properties.tags // []) | index("HIGH"))
+            ) | length
+          ' trivy-results.sarif)
+  
+          # Debug: Print the first vulnerability entry to inspect the structure
+          echo "Debug: First vulnerability entry:"
+          jq '.runs[].results[0]' trivy-results.sarif
+  
           # Store environment variables
           echo "LAST_SCAN_UTC=${TIMESTAMP_UTC}" >> $GITHUB_ENV
           echo "LAST_SCAN_SGT=${TIMESTAMP_SGT}" >> $GITHUB_ENV
